--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@ html, body {
 
 body {
   font-size: 100%;
-  line-height: 1;
+  line-height: 20px;
   font-size: 14px;
   -ms-text-size-adjust: 100%;
   -moz-text-size-adjust: 100%;
@@ -97,7 +97,6 @@ body {
     padding: 10px;
 }
 .mainblock__text {
-    line-height: 20px;
     margin-bottom: 40px;
 }
 
@@ -118,3 +117,75 @@ body {
     padding: 0 10px;
 }
 
+
+
+.areas {
+  width: 100vw;
+  background-color: rgba(0, 0, 0, 1);
+  display: flex;
+  justify-content: center;
+  padding: 120px 0 80px 0;
+}
+
+.areas__title {
+  font-size: 40px;
+  text-align: center;
+}
+.areas__subtitle {
+  font-size: 23px;
+  color: rgba(192, 192, 192, 1);
+  padding: 20px 0 40px 0;
+  text-align: center;
+}
+.areas__grid {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-template-columns: minmax(200px, 576px) minmax(200px, 576px);
+  padding: 0 10px;
+  grid-gap: 15px;
+}
+.grid__column {
+  height: 100%;
+  width: 100%;
+  height: 600px;
+  display: grid;
+  align-items: end;
+  padding: 0 30px 30px 30px;
+  grid-template-rows: 1fr;
+  font-size: 14px;
+}
+
+.grid__column_img1{ background: url('img/area1.svg'); background-position: center; }
+.grid__column_img2{ background: url('img/area2.svg'); background-position: center; }
+.grid__column_img3{ background: url('img/area3.svg'); background-position: center;}
+.grid__column_img4{ background: url('img/area4.svg'); background-position: center;}
+
+
+.grid__column__title{
+  text-transform: uppercase;
+}
+
+.grid__column__text {
+  padding: 10px 0 25px 0;
+  color: rgba(192, 192, 192, 1);
+}
+.grid__column__btn {
+  color: #000;
+  cursor: pointer;
+}
+
+.grid__column__btn span{
+  padding: 10px 10px 10px 40px;
+  background-color: white;
+  border-radius: 15px;
+  position: relative;
+}
+
+.grid__column__btn span::before{
+  position: absolute;
+  height: 30px;
+  width: 30px;
+  content: url('img/beforeBtn.svg');
+  top: 3px;
+  left: 5px;
+  } 
