Do blocks: "clients", "star", "connection" + start "footer"

--- a/style.css
+++ b/style.css
@@ -14,6 +14,10 @@
   box-sizing: border-box;
 }
 
+li {
+  list-style-type: none;
+}
+
 html,
 body {
   height: 100%;
@@ -45,7 +49,11 @@ body {
   text-transform: uppercase;
 }
 
-
+.title {
+  font-size: 40px;
+  line-height: 42px;
+  text-align: center;
+}
 
 .mainblock {
   width: 100%;
@@ -127,7 +135,6 @@ header {
 }
 
 .areas__title {
-  font-size: 40px;
   text-align: center;
 }
 
@@ -212,7 +219,8 @@ header {
 
 
 .mountain,
-.monstera {
+.monstera,
+.star {
   height: 600px;
   width: 100%;
   background: url('img/Mountain.svg');
@@ -226,6 +234,11 @@ header {
   background: url('img/monstera.svg');
   background-size: cover;
   background-position: center;
+}
+
+.star {
+  background: url('img/star.svg');
+  background-size: cover;
 }
 
 .text-move {
@@ -245,9 +258,7 @@ header {
 }
 
 .text-move__title {
-  width: 100%;
-  text-align: center;
-
+  letter-spacing: 2px;
 }
 
 
@@ -306,3 +317,109 @@ header {
   background-size: cover;
   align-items: end;
 }
+
+
+.clients {
+  height: 500px;
+  background-color: #000;
+  text-align: center;
+}
+
+.clients__title {
+  padding-top: 110px;
+  padding-bottom: 20px;
+}
+
+.clients__subtitle {
+  font-size: 24px;
+}
+
+.clients__track {
+  display: flex;
+  padding-top: 100px;
+  width: 100%;
+  justify-content: space-between;
+  align-items: center;
+}
+
+
+
+.connection {
+  background-color: #000;
+  text-align: center;
+  display: flex;
+  justify-content: center;
+  padding: 110px 0;
+}
+
+.connection__title {
+  max-width: 600px;
+}
+
+.connection__subtitle {
+  padding: 15px 0 35px 0;
+  font-size: 24px;
+}
+
+
+
+
+
+.footer__grid {
+
+  background-color: #000;
+  font-size: 14px;
+
+}
+
+.footer__grid-rowOne {
+  display: flex;
+  justify-content: space-between;
+  padding-top: 100px;
+}
+
+.footer__logo {
+  display: flex;
+  flex-direction: column;
+}
+
+.footer__logo img {
+  width: 128px;
+  height: 31px;
+  margin-bottom: 20px;
+}
+
+.footer__links a {
+
+  text-decoration: none;
+  color: white;
+}
+
+.footer__links li {
+
+  padding: 5px 0;
+
+}
+
+
+.footer__links {
+  display: flex;
+  padding-right: 100px;
+}
+
+
+.footer__links-areas,
+.footer__links-pages {
+  display: flex;
+  flex-direction: column;
+}
+
+.footer__links-pages {
+  padding-left: 55px;
+}
+
+.footer__links-areas__title {}
+
+.uppercase {}
+
+.footer__links-pages {}
