--- a/style.css
+++ b/style.css
@@ -23,7 +23,6 @@ body {
   height: 100%;
   margin: 0;
   padding: 0;
-  min-width: 320px;
   position: relative;
   width: 100%;
   color: #000;
@@ -50,7 +49,7 @@ body {
 }
 
 .title {
-  font-size: 40px;
+  font-size: 1.5rem;
   line-height: 42px;
   text-align: center;
 }
@@ -71,6 +70,8 @@ body {
 .container {
   max-width: 1200px;
   margin: 0 auto;
+  height: 100%;
+  padding: 0 10px;
 }
 
 header {
@@ -79,15 +80,20 @@ header {
   background-color: rgba(24, 24, 24, 1);
   position: fixed;
   top: 0;
+  z-index: 50;
 }
 
 .header__content {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  max-width: 1200px;
-  margin: 0 auto;
   height: 100%;
+}
+
+.header__list{
+  width: 100%;
+  display: flex;
+  justify-content: end;
 }
 
 .header__list li {
@@ -97,7 +103,7 @@ header {
 
 .header__list li a {
   text-decoration: none;
-  font-size: 15px;
+  font-size: 1rem;
   color: white;
 }
 
@@ -108,6 +114,12 @@ header {
   border-radius: 15px;
 }
 
+.header__logo{
+  z-index: 3;
+  height: 100%;
+  align-items: center;
+  display: flex;
+}
 
 .mainblock__content {
   max-width: 600px;
@@ -116,13 +128,14 @@ header {
 }
 
 .mainblock__title {
-  font-size: 54px;
+  font-size: 2.2rem;
   line-height: 60px;
   padding: 10px;
 }
 
 .mainblock__text {
   margin-bottom: 40px;
+  padding: 0 10px;
 }
 
 
@@ -139,7 +152,7 @@ header {
 }
 
 .areas__subtitle {
-  font-size: 23px;
+  font-size: 1.1rem;
   padding: 20px 0 40px 0;
   text-align: center;
 }
@@ -158,17 +171,11 @@ header {
   height: 600px;
   display: grid;
   align-items: end;
-  padding: 0 30px 30px 30px;
+  padding: 0 2vw 30px 2vw;
   grid-template-rows: 1fr;
 }
 
-@media(max-width: 100px) {
 
-  .grid__column {
-    padding: 0 10px 30px 10px;
-
-  }
-}
 
 .grid__column_img1 {
   background: url('img/area1.svg');
@@ -209,14 +216,21 @@ header {
 
 .whiteBtn span::before {
   position: absolute;
-  height: 30px;
-  width: 30px;
   content: url('img/beforeBtn.svg');
   top: 3px;
   left: 5px;
 }
 
+@media (max-width: 700px){
 
+  .areas__grid {
+    display: grid;
+    grid-gap: 30px;
+    grid-template-columns: minmax(200px, 576px);
+  }
+
+  .grid__column__text{ padding-top: 5px; }
+}
 
 .mountain,
 .monstera,
@@ -371,23 +385,21 @@ header {
   font-size: 14px;
 
 }
-
-.footer__grid-rowOne {
+.footer__grid-rowOne, 
+.footer__grid-rowTwo, 
+.footer__grid-rowThree {
   display: flex;
   justify-content: space-between;
+  align-items: center;
+}
+
+
+.footer__grid-rowOne {
   padding-top: 100px;
+  align-items: start;
 }
 
-.footer__logo {
-  display: flex;
-  flex-direction: column;
-}
-
-.footer__logo img {
-  width: 128px;
-  height: 31px;
-  margin-bottom: 20px;
-}
+.footer__logo img { margin-bottom: 20px; }
 
 .footer__links a {
 
@@ -395,16 +407,12 @@ header {
   color: white;
 }
 
-.footer__links li {
-
-  padding: 5px 0;
-
-}
+.footer__links li {padding: 5px 0; }
 
 
 .footer__links {
   display: flex;
-  padding-right: 100px;
+  padding-right: 5vw;
 }
 
 
@@ -418,8 +426,171 @@ header {
   padding-left: 55px;
 }
 
-.footer__links-areas__title {}
 
-.uppercase {}
+.footer__grid-rowTwo {
+  margin: 35px 0;
+  padding: 35px 0;
+  border-top: 2px solid white;
+  border-bottom: 2px solid white;
+}
 
-.footer__links-pages {}
+.footer__newsletter-subtitle {
+  padding-top: 20px;
+}
+
+.bigBtn {
+  display: flex;
+}
+
+.bigBtn span{
+  padding: 20px 15vw 20px 15vw;
+}
+
+.bigBtn span::before {
+  top: 4px;
+}
+
+
+.footer__grid-rowThree {padding-bottom: 50px;}
+
+.footer__social-networks img {padding-left: 20px;}
+
+
+
+
+
+
+/*********************** BURGER **********************/
+
+
+@media (max-width:998px) {
+
+  body.lock {
+
+    overflow: hidden;
+  }
+
+  header{
+    background-color: transparent;
+  }
+
+  .header__list {
+
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    background: black;
+    z-index: 2;
+    transition-duration: 0.5s;
+
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    justify-content: center;
+    left: 0;
+    top: -100%;
+    transition: all 0.3s ease 0s;
+    overflow: auto;
+  }
+
+  .header::before {
+    background: transparent;
+  }
+
+  .header__list.active {
+
+    top: 0;
+  }
+
+  .header__list ul {
+
+    padding-bottom: 50px;
+    z-index: 2;
+  }
+
+  .header__list ul li {
+
+    display: block;
+    padding: 0;
+    padding: 20px 0;
+  }
+
+
+  .header__list ul li a {
+
+    font-size: 24px;
+  }
+
+  .header__burger {
+
+    display: block;
+    position: relative;
+    right: 15px;
+    width: 40px;
+    height: 28px;
+    cursor: pointer;
+    z-index: 3;
+    position: fixed;
+  }
+
+  .header__burger::before,
+  .header__burger::after,
+  .header__burger span {
+
+    content: '';
+    position: absolute;
+    background-color: #000000;
+    width: 100%;
+    height: 4px;
+    left: 0;
+    border-radius: 5px;
+    z-index: 2;
+    transition: all 0.3s ease 0s;
+    display: block;
+  }
+
+  .header__burger::before {
+    top: 0;
+  }
+
+  .header__burger::after {
+    bottom: 0;
+  }
+
+  .header__burger span {
+
+    top: 50%;
+    transform: translateY(-50%);
+  }
+
+  .header__burger.active::before {
+
+    transform: rotate(45deg);
+    top: 12px;
+  }
+
+  .header__burger.active::after {
+
+    transform: rotate(-45deg);
+    bottom: 12px;
+  }
+
+  .header__burger.active span {
+
+    display: none;
+  }
+
+
+
+}
+
+/*********************** BURGER **********************/
+
+
+
+@media (max-width: 998px){
+  .infoLine__content{
+    margin-right: 0;
+  }
+  .infoLine{justify-content: center;}
+}
