--- a/style.css
+++ b/style.css
@@ -40,6 +40,16 @@ body {
   color: white;
 }
 
+@media (max-width: 998px) {
+  body {
+    font-size: 13px;
+  }
+}
+
+
+
+
+
 .gray {
   color: rgba(192, 192, 192, 1);
 }
@@ -49,9 +59,13 @@ body {
 }
 
 .title {
-  font-size: 1.5rem;
+  font-size: 2rem;
   line-height: 42px;
   text-align: center;
+}
+
+.subtitle {
+  font-size: 1.3rem;
 }
 
 .mainblock {
@@ -71,7 +85,7 @@ body {
   max-width: 1200px;
   margin: 0 auto;
   height: 100%;
-  padding: 0 10px;
+  padding: 0 15px;
 }
 
 header {
@@ -90,7 +104,7 @@ header {
   height: 100%;
 }
 
-.header__list{
+.header__list {
   width: 100%;
   display: flex;
   justify-content: end;
@@ -114,7 +128,7 @@ header {
   border-radius: 15px;
 }
 
-.header__logo{
+.header__logo {
   z-index: 3;
   height: 100%;
   align-items: center;
@@ -152,8 +166,7 @@ header {
 }
 
 .areas__subtitle {
-  font-size: 1.1rem;
-  padding: 20px 0 40px 0;
+  padding: 10px 0 40px 0;
   text-align: center;
 }
 
@@ -161,7 +174,6 @@ header {
   display: grid;
   grid-template-columns: 1fr 1fr;
   grid-template-columns: minmax(200px, 576px) minmax(200px, 576px);
-  padding: 0 10px;
   grid-gap: 15px;
 }
 
@@ -221,16 +233,6 @@ header {
   left: 5px;
 }
 
-@media (max-width: 700px){
-
-  .areas__grid {
-    display: grid;
-    grid-gap: 30px;
-    grid-template-columns: minmax(200px, 576px);
-  }
-
-  .grid__column__text{ padding-top: 5px; }
-}
 
 .mountain,
 .monstera,
@@ -268,7 +270,7 @@ header {
   flex-direction: column;
   justify-content: center;
   max-width: 300px;
-  margin-right: 60px;
+  margin-right: 3vw;
 }
 
 .text-move__title {
@@ -284,6 +286,7 @@ header {
   justify-content: end;
   align-items: start;
   margin-bottom: 40px;
+  z-index: 3;
 }
 
 .infoLine__content {
@@ -302,39 +305,49 @@ header {
   height: 540px;
   display: flex;
   flex: 1 0 100%;
+  overflow-x: hidden;
+  position: relative;
 }
 
-.tools__leftPart {
+.tools__left {
   display: flex;
   flex: 1 0 50%;
+  height: 100%;
   background-color: #000;
   flex-direction: column;
+  padding: 0 2vw;
   justify-content: center;
-  padding: 0 5%;
 }
 
-.tools__leftPart__title {
+.tools__title {
   font-size: 28px;
   line-height: 32px;
 }
 
-.tools__leftPart__text {
+.tools__text {
   padding: 10px 0 25px 0;
+  font-size: 0.9rem;
+
 }
 
+.tools__right {
 
-.tools__rightPart {
   display: flex;
   flex: 1 0 50%;
+  height: 100%;
   background-image: url('img/tools.svg');
   background-position: center;
   background-size: cover;
-  align-items: end;
+}
+
+.absolute {
+  position: absolute;
+  bottom: 0;
 }
 
 
+
 .clients {
-  height: 500px;
   background-color: #000;
   text-align: center;
 }
@@ -344,18 +357,14 @@ header {
   padding-bottom: 20px;
 }
 
-.clients__subtitle {
-  font-size: 24px;
-}
-
 .clients__track {
   display: flex;
-  padding-top: 100px;
+  flex-wrap: wrap;
+  padding: 100px 20px 100px 20px;
   width: 100%;
-  justify-content: space-between;
+  justify-content: space-around;
   align-items: center;
 }
-
 
 
 .connection {
@@ -372,10 +381,7 @@ header {
 
 .connection__subtitle {
   padding: 15px 0 35px 0;
-  font-size: 24px;
 }
-
-
 
 
 
@@ -385,8 +391,9 @@ header {
   font-size: 14px;
 
 }
-.footer__grid-rowOne, 
-.footer__grid-rowTwo, 
+
+.footer__grid-rowOne,
+.footer__grid-rowTwo,
 .footer__grid-rowThree {
   display: flex;
   justify-content: space-between;
@@ -399,7 +406,13 @@ header {
   align-items: start;
 }
 
-.footer__logo img { margin-bottom: 20px; }
+.footer__logo img {
+  margin-bottom: 20px;
+}
+
+.footer__logo {
+  padding-right: 20px;
+}
 
 .footer__links a {
 
@@ -407,7 +420,9 @@ header {
   color: white;
 }
 
-.footer__links li {padding: 5px 0; }
+.footer__links li {
+  padding: 5px 0;
+}
 
 
 .footer__links {
@@ -442,7 +457,7 @@ header {
   display: flex;
 }
 
-.bigBtn span{
+.bigBtn span {
   padding: 20px 15vw 20px 15vw;
 }
 
@@ -451,12 +466,13 @@ header {
 }
 
 
-.footer__grid-rowThree {padding-bottom: 50px;}
+.footer__grid-rowThree {
+  padding-bottom: 50px;
+}
 
-.footer__social-networks img {padding-left: 20px;}
-
-
-
+.footer__social-networks img {
+  padding-left: 20px;
+}
 
 
 
@@ -470,7 +486,7 @@ header {
     overflow: hidden;
   }
 
-  header{
+  header {
     background-color: transparent;
   }
 
@@ -539,7 +555,7 @@ header {
 
     content: '';
     position: absolute;
-    background-color: #000000;
+    background-color: #443120;
     width: 100%;
     height: 4px;
     left: 0;
@@ -586,11 +602,62 @@ header {
 
 /*********************** BURGER **********************/
 
+@media (max-width: 400px) {
+  .clients__track {
+    gap: 30px;
+    padding: 70px 0px 70px 0px;
+  }
+}
+
+@media (max-width:450px) {
+
+  .footer__grid-rowOne {
+    padding-top: 100px;
+    flex-direction: column;
+    gap: 30px;
+  }
+
+  .footer__links {
+    padding: 0;
+  }
+}
+
+@media (max-width: 700px) {
+
+  .areas__grid {
+    display: grid;
+    grid-gap: 30px;
+    grid-template-columns: minmax(200px, 576px);
+  }
+
+  .grid__column__text {
+    padding-top: 5px;
+  }
+
+  .tools__left {
+    flex: 1 0 70%;
+  }
+}
 
 
-@media (max-width: 998px){
-  .infoLine__content{
+
+@media (max-width: 998px) {
+  .infoLine__content {
     margin-right: 0;
   }
-  .infoLine{justify-content: center;}
+
+  .infoLine {
+    justify-content: center;
+  }
+
+  .clients__track,
+  .connection {
+    padding-top: 70px;
+    padding-bottom: 70px;
+  }
+
+  .clients__track {
+    gap: 30px;
+  }
+
 }
